# censearch

./: .gitignore  README.md  app.py  backup_db.py  create_table_search_index.py  load_acs_table_docs.py  load_acs_variable_docs.py  logging_config.json  pepper_endpoint.py  pyproject.toml
backups/: acs_tables_2024-08-29.parquet.gzip  acs_variables_2024-08-29.parquet.gzip
censearch/: nest_variables.py
censearch/migrations/: 9998_table_ts_index.sql  9999_reference.sql
censearch/templates/: base.html  report_problem.html  search_home.html  search_results.html  table_detail.html
fixtures/: acs_term_queries.json
pdf_references/: 2022-5yr-api-changes.csv
raw/: groups_acs5_2022_20240828.json
